canvas complete with interactivity[C

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	</style>
 </head>
 <body>
-	<canvas></canvas>
+	<div style="position: absolute;">
+		<canvas></canvas>
+	</div>
+	<div style="position: absolute; left: 650px; top: 300px; width:200px; height:80px; text-align: center; background-color: white;">
+		<h1>Bubble Effect</h1>
+	</div>
 	<script src="canvas.js"></script>
 </body>
 </html>
